<resources>
    <string name="app_name">SafeRide</string>
    <string name="title_activity_create_account">CreateAccount</string>
    <string name="username">John Doe</string>
    <string name="create">Join SafeRide!</string>
    <string name="student">951XXXXXXX</string>
    <string name="phoneNumber">5555555555</string>
    <string name="homeAddress">Enter your home address</string>


    <string name="start">Starting Address</string>
    <string name="end">Ending Address</string>
    <string name="passengers">Number of passengers</string>

    <string name="getSafe">Get Safe!</string>
    <string name="editP">Profile</string>

    <string name="welcome">Welcome to Safe Ride</string>
    <string name="schedule">Schedule Your Ride</string>

    <string name="title_activity_make_request">makeRequest</string>
    <string name="title_activity_confirmation">confirmationActivity</string>

    <string name="confirmed">Your Ride Request Is Being Processed</string>
    <string name="thanks">Thanks for using Safe Ride!</string>

</resources>
