<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.uoregoncis422.saferide.CreateAccount">



    <EditText android:hint="@string/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/userName"
        android:singleLine="true"
        android:lines="1"/>
    <EditText android:hint="@string/student"
        android:layout_below="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/studentid"
        android:singleLine="true"
        android:lines="1"
        android:inputType="number"/>
    <EditText android:hint="@string/phoneNumber"
        android:layout_below="@+id/studentid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:imeActionId="0x00000006"
        android:id="@+id/phonenumber"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:lines="1"
        android:inputType="number"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phonenumber"
        android:text="@string/create"
        android:textColor="#ffffff"
        android:onClick="createUser"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/userName"
        android:layout_centerVertical="true"
        android:adjustViewBounds="true"
        android:src="@drawable/saferide_banner"
        android:id="@+id/banner"
        />

</RelativeLayout>
