<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.uoregoncis422.saferide.makeRequest"
    android:background="@drawable/crop_city_lights"
    android:backgroundTint="#dddddd"
    android:backgroundTintMode="multiply">

    <TextView
        android:id="@+id/text_id"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:capitalize="characters"
        android:text="Welcome to Safe Ride"
        android:textColor="#FFFFFF"
        android:textColorHighlight="@android:color/primary_text_dark"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="50dp"
        android:fontFamily="sans-serif-light"
        android:focusableInTouchMode="true"
        android:layout_above="@+id/startAddy"
        android:layout_centerHorizontal="true" />

    <EditText android:hint="@string/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/startAddy"
        android:singleLine="true"
        android:lines="1"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF" />

    <EditText android:hint="@string/end"
        android:layout_below="@+id/startAddy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/endAddy"
        android:singleLine="true"
        android:lines="1"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"/>

    <!--<TextEdit-->
        <!--android:text="@string/homeOp"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@+id/startAddy"-->
        <!--android:imeActionId="0x00000006"-->
        <!--android:id="@+id/ASAP"-->
        <!--android:singleLine="true"-->
        <!--android:lines="1"/>-->

    <EditText android:hint="@string/passengers"
        android:layout_below="@+id/endAddy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:imeActionId="0x00000006"
        android:id="@+id/peopleNumber"
        android:singleLine="true"
        android:lines="1"
        android:inputType="number"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"/>
    <Button
        android:id="@+id/requestButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/peopleNumber"
        android:text="@string/getSafe"
        android:textColor="#ffffff"
        android:onClick="checkInfo"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#8696a8" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editP"
        android:textColor="#f1f1f1"
        android:onClick="editProfile"
        android:backgroundTint="#2f2f2f"
        android:textSize="12sp"
        android:id="@+id/button"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/peopleNumber"
        android:layout_toEndOf="@+id/peopleNumber" />

</RelativeLayout>
